--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | Age calculator app</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,13 +24,12 @@
         <span class="monthError error" >This field is required</span>
       </div>
       
-
       <div class="evenbox">
         <label for="year" class="label labelYear">YEAR</label>
         <input type="text" name="year" class="inputBox yearInput" placeholder="YYYY">
         <span class="yearError error" id="yearErrors">This field is required</span>
       </div>
-      <a href="#" class="icon-arrow button"><img src="assets/images/icon-arrow.svg" alt=""></a>
+      <a href="#" class="icon-arrow button"><img src="assets/images/icon-arrow.svg" alt="arrow icon"></a>
     </div>
     <div class="outputContainer">
       <div ><span class="years">--</span> years</div>
